--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_launcher_icons: ^0.14.3
   flutter_native_splash: ^2.4.4
-
+  intl: ^0.20.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
